# madder

./: CMakeLists.txt  LICENSE
.devcontainer/: Dockerfile  devcontainer.json
cmake/: asio.cmake  dependencies.cmake
examples/: CMakeLists.txt  example_01.cpp
madder/: CMakeLists.txt
madder/include/: CMakeLists.txt
madder/include/madder/core/: application.hpp
madder/madder/include/: madder.hpp
madder/madder/include/madder/core/: application.hpp
madder/madder/source/madder/core/: application.cpp
madder/source/: CMakeLists.txt
